--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,14 @@
 			<artifactId>selenium-java</artifactId>
 			<version>3.12.0</version>
 		</dependency>
+
+<!-- https://mvnrepository.com/artifact/com.sikulix/sikulixapi -->
+	<dependency>
+		<groupId>com.sikulix</groupId>
+		<artifactId>sikulixapi</artifactId>
+		<version>1.1.0</version>
+	</dependency>
+
 	</dependencies>
 
 	<build>
@@ -54,6 +62,7 @@
 			</plugin>
 		</plugins>
 	</build>
-
+	
+	
 
 </project>
