--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 			<groupId>org.testng</groupId>
 			<artifactId>testng</artifactId>
 			<version>6.10</version>
-			<scope>test</scope>
+			<scope>compile</scope>
 		</dependency>
 
 		<!-- https://mvnrepository.com/artifact/com.aventstack/extentreports -->
@@ -27,12 +27,19 @@
 			<version>3.12.0</version>
 		</dependency>
 
-<!-- https://mvnrepository.com/artifact/com.sikulix/sikulixapi -->
-	<dependency>
-		<groupId>com.sikulix</groupId>
-		<artifactId>sikulixapi</artifactId>
-		<version>1.1.0</version>
-	</dependency>
+
+		<dependency>
+			<groupId>org.seleniumhq.selenium</groupId>
+			<artifactId>selenium-java</artifactId>
+			<version>3.12.0</version>
+		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/com.sikulix/sikulixapi -->
+		<dependency>
+			<groupId>com.sikulix</groupId>
+			<artifactId>sikulixapi</artifactId>
+			<version>2.0.1</version>
+		</dependency>
 
 	</dependencies>
 
@@ -49,6 +56,28 @@
 			</plugin>
 
 
+			<plugin>
+				<groupId>com.spotify</groupId>
+				<artifactId>dockerfile-maven-plugin</artifactId>
+				<version>1.3.5</version>
+				<executions>
+					<execution>
+						<id>default</id>
+						<goals>
+							<goal>build</goal>
+							<goal>push</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<!-- vinsdocker is org name. -->
+					<!-- containertest is the name of the image / application -->
+					<repository>vinsdocker/containertest</repository>
+					<!-- version of your image: could be sprint11 or release5 etc -->
+					<tag>icu</tag>
+				</configuration>
+			</plugin>
+
 
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -62,7 +91,6 @@
 			</plugin>
 		</plugins>
 	</build>
-	
-	
+
 
 </project>
