--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,7 +1,7 @@
 image: "ubuntu:bionic"
 
 before_script:
-  - sudo apt install default-jdk maven -y
+  - apt install default-jdk maven -y
   - git clone https://$GITUSER:$GITPASS@https://gitlab.com/yesodot/iron/qa/root---automation.git 
 
 compile:
