--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,7 @@
 image: "ubuntu:bionic"
 
 before_script:
+  - apt update
   - apt install default-jdk maven -y
   - git clone https://$GITUSER:$GITPASS@https://gitlab.com/yesodot/iron/qa/root---automation.git 
 
