--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -5,11 +5,13 @@ on: [push]
 jobs:
   build:
 
-    runs-on: qayesodot/qayesodot:jdk_mvn
+    runs-on: ubuntu:bionic
 
     steps:
     - uses: actions/checkout@v2
-
-
+    - name: update JDK and MVN
+      run: |
+        apt update
+        apt install default-jdk maven git -y 
     - name: Build with Maven
       run: mvn clean compile test-compile
