--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -15,3 +15,8 @@ jobs:
         sudo apt install default-jdk maven git -y 
     - name: Build with Maven
       run: mvn clean compile test-compile
+    
+    - uses: actions/upload-artifact@v1
+      with:
+        name: my-artifact
+        path: path/to/home/runner/work/icu-automation/icu-automation/target/test-classes
