--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -18,5 +18,5 @@ jobs:
     
     - uses: actions/upload-artifact@v1
       with:
-        name: my-artifact
-        path: path/to/home/runner/work/icu-automation/icu-automation/target/test-classes
+        name: icu-automation
+        path: path/to/home/runner/work/icu-automation/icu-automation
